TAG: qcreports_db-6-0-26-1
DATE: 07/08/2025
STAFF: lec
wts2-1697/e4g-310/Display alleles associated with a strain in repository ID and strain name custom reports
        modified:   PRB_StrainNomenCheck.py

TAG: qcreports_db-6-0-25-30
DATE: 07/07/2025
STAFF: lec
wts2-1695/e4g-304/tweak to GXD HT Experiment Partially Reviewed Papers custom report
        modified:   GXD_HTExperimentPMID.py
        modified:   pwireports.txt

TAG: qcreports_db-6-0-25-29
DATE: 06/30/2025
STAFF: lec
wts2-1691/e4g-302/produce on demand list of HT experiments selected to be curated
wts2-1692/e4g-303/list of HT experiments selected to be curated with PMIDs
        new file:   pwi/GXD_HTExperimentToDo.py
        new file:   pwi/GXD_HTExperimentToDoPMID.py
        modified:   pwi/pwireports.txt

TAG: qcreports_db-6-0-25-28
TAG: qcreports_db-6-0-25-27
DATE: 06/25/2025
STAFF: lec
wts2-1689/e4g-298/have GXDHT litriage status reflect HT Index curation status = done
	modified:   qcr.shtml
	new file:   mgd/BIB_CurationStatusMismatch_GXD.sql

TAG: qcreports_db-6-0-25-26
TAG: qcreports_db-6-0-25-25
DATE: 06/17/2025
STAFF: lec
undo
remove GXD_Triage archive
        modified:   qcr.shtml
        modified:   qcweekly_reports.csh

TAG: qcreports_db-6-0-25-24
DATE: 06/03/2025
STAFF: lec
wts2-1673/how many alleles sold by Jax are used to annotated GXDHT_Samples?
wts2-1675/which alleles are used to annotate GXDHT_Samples?
        new file:   GXD_HTSampleAlleles.py
        modified:   pwireports.txt

TAG: qcreports_db-6-0-25-23
DATE: 06/03/2025
wts2-1674/e4g-278/Add Creative Commons y/n to GXD Index Overview & Uber Custom Reports
        modified:   GXD_IndexOverview.py

STAFF: lec
TAG: qcreports_db-6-0-25-22
DATE: 05/29/2025
STAFF: lec
wts2-1671/e4g-273/GXD Papers Requiring Images QC tweak
        modified:   GXD_Images.py

TAG: qcreports_db-6-0-25-21
DATE: 05/14/2025
STAFF: lec
e4g-244/Add RNA-Seq Type column to the GXD_HTOverview QC report
        modified:   mgd/GXD_HTOverview.py
