@@ -3,6 +3,7 @@ DATE: 07/08/2025
 STAFF: lec
 wts2-1697/e4g-310/Display alleles associated with a strain in repository ID and strain name custom reports
         modified:   PRB_StrainNomenCheck.py
+        modified:   PRB_StrainRepoCheck.py
 
 TAG: qcreports_db-6-0-25-30
 DATE: 07/07/2025
